{
    "version": 1,
    "name": "PlayerActions",
    "maps": [
        {
            "name": "BatMovement",
            "id": "e0e8f4bc-9a67-4d02-83a2-345109c32ed5",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "3e38c3ea-e8cb-455e-bfdd-bc05f6cd0ce1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "DashLeft",
                    "type": "Button",
                    "id": "55137f51-1675-470c-a180-27925673ccce",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DashRight",
                    "type": "Button",
                    "id": "59cb1990-d5e8-48e0-9702-664bf9c529d3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Sonar",
                    "type": "Button",
                    "id": "753cf2ee-7d89-4e46-a5f2-3109aeb29fee",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "3a4383bb-b992-4339-8466-3f2655bc6dba",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "e76ec303-e5bf-4017-a2b9-7e8f2143a23c",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "6d020817-c78d-4227-bcb9-a35b0ba5bf9a",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "d21a671e-276a-4e9e-aef1-3d1ff0c2c21f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "5e218aee-bd90-4597-b005-66aebd6c42fc",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "bd24f81f-6b76-41d7-b8b4-e6de3a5d0c90",
                    "path": "<Keyboard>/a",
                    "interactions": "MultiTap",
                    "processors": "",
                    "groups": ";Keyboard and Mouse",
                    "action": "DashLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "deb2ce09-1326-4da9-8914-bc59079b9487",
                    "path": "<Keyboard>/d",
                    "interactions": "MultiTap",
                    "processors": "",
                    "groups": ";Keyboard and Mouse",
                    "action": "DashRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fede84da-8956-4237-a30c-215ee595596a",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sonar",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard and Mouse",
            "bindingGroup": "Keyboard and Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}